Fix z-index/overlap issues.
The fields are still clickable

Fixes DD 71427 339
Fixes DD 71427 341
Fixes DD 71427 338

--- a/app/design/frontend/Travers/default/Magento_QuickOrder/styles/module/_common.scss
+++ b/app/design/frontend/Travers/default/Magento_QuickOrder/styles/module/_common.scss
@@ -50,6 +50,7 @@ $order-product-bg__color: $color-gray94;
 
                     .field.required {
                         margin-top: 0;
+                        z-index: 0;
 
                         &.qty {
                             display: flex;
@@ -253,7 +254,6 @@ $order-product-bg__color: $color-gray94;
     .ui-autocomplete {
         cursor: default;
         left: 0;
-        position: absolute;
         top: 0;
     }
 
